merge-upstream: more dark mode fixes

--- a/src/components/color-picker/color-picker.css
+++ b/src/components/color-picker/color-picker.css
@@ -13,17 +13,18 @@ body :global(.Popover) {
 }
 
 :global(.Popover-body) {
-    background: white;
-    border: 1px solid #ddd;
+    color: $text-primary;
+    background: $popover-background;
+    border: 1px solid $ui-pane-border;
     padding: 4px;
     border-radius: 4px;
     padding: 4px;
-    box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, .3);
+    box-shadow: 0px 0px 8px 1px $ui-pane-border;
 }
 
 :global(.Popover-tipShape) {
-    fill: white;
-    stroke: #ddd;
+    fill: $popover-background;
+    stroke: $ui-pane-border;
 }
 
 .clickable {
@@ -39,11 +40,7 @@ body :global(.Popover) {
 .row-header {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: 0.65rem;
-    color: #575E75;
     margin: 8px 8px 0 8px;
-}
-[theme="dark"] .row-header {
-    color: #ccc;
 }
 
 .label-name {
@@ -51,11 +48,8 @@ body :global(.Popover) {
 }
 
 .divider {
-    border-top: 1px solid #ddd;
+    border-top: 1px solid $ui-pane-border;
     margin: 8px;
-}
-[theme="dark"] .divider {
-    border-color: #333;
 }
 
 .swap-button {
@@ -70,14 +64,11 @@ body :global(.Popover) {
 .swatch {
     width: 1.5rem;
     height: 1.5rem;
-    border: 1px solid #ddd;
+    border: 1px solid $ui-pane-border;
     border-radius: 4px;
     box-sizing: content-box;
     display: flex;
     align-items: center;
-}
-[theme="dark"] .swatch {
-    border-color: $form-border;
 }
 
 .large-swatch-icon {
